# SoftRenderer

./: .gitignore  CMakeLists.txt  README.md  data_input.cpp  data_model.cpp  geometry.cpp  glad.c  imgui.ini  main.cpp  math.cpp  our_gl.cpp
include/: camera.h  data.h  data_input.h  data_model.h  fbuffer.h  geometry.h  main.h  math.h  our_gl.h  render.h  texture.h
shader/: AO_Shader.h  EnvirMap_Shader.h  Glow_Shader.h  HDR_Shader.h  PBR_Shader.h  Simple_BP_Shader.h  Simple_Shader.h  Skybox_Shader.h  pre_Depth_Shader.h  pre_LinDepth_Shader.h  pre_OmniDepth_Shader.h  pre_genSkyBox_Shader.h  pre_genSkyBoxforIBL.h  pre_uvBuffer_Shader.h  shader.h
